<resources>
    <string name="app_name">BackgroundSerato</string>
    <string name="title">Hello, Serato</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="main_button">Change!</string>
    <string name="day_mode">Day Mode</string>
    <string name="star">star</string>
    <string name="from_cit">from CIT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_1st">1st</string>
    <string name="_4th">4th</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="birthday">Birthday</string>
    <string-array name="user_type">
        <item name="admin">Admin</item>
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
</resources>